--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,12 +1,15 @@
 
-
+body{
+    background: rgb(255, 111, 111);
+}
 
 .title-cont{
     display: flex;
     justify-content: center;
     align-items: center;
     font: bold 2.5rem serif;
-    margin: 50px;
+    background: rgb(176, 55, 180);
+    margin: 20px;
 }
 
 .main-title{
@@ -73,12 +76,6 @@
 
   /* estilos main --------------------------------------*/
 
-.card-cont{
-    border:2px solid;
-    width: 700px;
-    padding: 70px;
-}
-
 .fil-form{
     display: flex;
     justify-content: center;
@@ -88,7 +85,6 @@
 
 .fil-box{
     display: flex;
-    width: 200px;
     height: 20px;
     border-radius: 5px;
     border:2px solid;
@@ -110,24 +106,28 @@
 /* card---------------------------------------- */
 
 .card{
-    display: flex;
-    margin-top: 80px;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    width: 200px;
+    
+    margin-top: 70px;
+    width: 250px;
     background-color:rgb(176, 55, 180);
     box-shadow: 0 4px 5px rgba(0, 0, 0, 0.2);
     border-radius: 3px;
     box-shadow: 0 0 10px black;
+    margin-left: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    float: left;
 }
 
 .card-img{
     max-width: 100%;
+    
 }
 
 .des-cont{
-    width: 300px;
     margin: 1rem;
+    width: 100%;
     background-color: rgba(255, 255, 255, 0.589);
     box-shadow: 0 4px 5px rgba(0, 0, 0, 0.2);
     border: 1px solid rgb(176, 55, 180);
@@ -148,6 +148,7 @@
     border: 1px solid;
     border-radius: 5px;
     cursor: pointer;
+    margin: 0px 0px 16px 16px;
 }
 
 .card-btn:hover{
