--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -2,141 +2,138 @@
   box-sizing: border-box;
 }
 
-
-.title-cont{
-    display: flex;
-    box-shadow: 0 0 10px black;
-    justify-content: center;
-    align-items: center;
-    font: bold 2.5rem serif;
-    background:rgba(176, 55, 180, 0.747);
-    
+.title-cont {
+  display: flex;
+  box-shadow: 0 0 10px black;
+  justify-content: center;
+  align-items: center;
+  font: bold 2.5rem serif;
+  background: rgba(176, 55, 180, 0.747);
+}
 
 body {
   background: rgb(255, 111, 111);
 }
-
-
 
 .main-title {
   font: bold 2.5rem serif;
 }
 
 /* Estilos formulario ---------------------------------- */
-.form-cont{
-    position: relative;
-    margin: 20px;
-    float: left;
-    width: 30%;
+.form-cont {
+  position: relative;
+  margin: 20px;
+  float: left;
+  width: 30%;
 }
 
-.main-form{
-    position: fixed;
-    flex-direction: column;
-    background: rgba(255, 79, 79, 0.911);
-    width: 400px;
-    height: 400px;
-    align-items: center;
-    justify-content: space-evenly;
-    border-radius: 20px;
-    box-shadow: 0 0 10px black;
-    display: none;
-  }
-
+.main-form {
+  position: fixed;
+  flex-direction: column;
+  background: rgba(255, 79, 79, 0.911);
+  top: 160px;
+  width: 400px;
+  height: 400px;
+  align-items: center;
+  justify-content: space-evenly;
+  border-radius: 20px;
+  box-shadow: 0 0 10px black;
+  display: none;
+}
 
 /* menú desplegable------------------------------------------------------ */
 
 .mainmenubtn {
-    position: fixed;
-    background-color: rgb(106, 106, 167);
-    color: white;
-    border: none;
-    border-radius: 10px;
-    cursor: pointer;
-    padding:10px;
-    margin-top:10px;
-    z-index: 9999;
+  position: fixed;
+  background-color: rgb(106, 106, 167);
+  color: white;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  padding: 10px;
+  margin-top: 10px;
+  z-index: 9999;
 }
 
 .mainmenubtn:hover {
-    background-color: rgb(158, 158, 192);
+  background-color: rgb(158, 158, 192);
 }
 
-.form-cont:hover .main-form{
-    display: flex;
-    transition: 4s;
-  }
+.form-cont:hover .main-form {
+  display: flex;
+  transition: 4s;
+}
 /* --------------------------------------- */
 
-  .text-box{
-    display: flex;
-    width: 300px;
-    height: 50px;
-    border-radius: 5px;
-    border:none;
-    font: bold 1.2rem serif;
-    text-align: center;
-    margin-top: 10px;
-  }
-
-.form-title-cont{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 50px;
-    font: bold 2.5rem serif;
-  }
-
-.form-title{
-    font: bold 2.5rem serif;
-  }
-
-  .label{
-    font: bold 1.3rem serif;
-  }
-
-.btn{
-    margin-top: 30px;
-    width: 200px;
-    height: 40px;
-    font: bold 1.2rem serif;
-    background: rgb(255, 255, 255);
-    color: rgb(0, 0, 0);
-    border-radius: 10px;
-    cursor: pointer;
-  }
-
-  /* estilos main --------------------------------------*/
-
-.fil-form{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 60px;
-    margin-bottom: 70px;
+.text-box {
+  display: flex;
+  width: 300px;
+  height: 50px;
+  border-radius: 5px;
+  border: none;
+  font: bold 1.2rem serif;
+  text-align: center;
+  margin-top: 10px;
 }
 
-.fil-box{
-    width: 40%;
-    height: 30px;
-    border-radius: 5px;
-    border:2px solid;
-    font: bold 1rem serif;
-    text-align: center;
+.form-title-cont {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 50px;
+  font: bold 2.5rem serif;
 }
 
-.fil-btn{
-    width: 100px;
-    height: 25px;
-    margin-left: 5px;
-    font: bold 1rem serif;
-    background: rgb(255, 255, 255);
-    color: rgb(0, 0, 0);
-    border-radius: 10px;
-    cursor: pointer;
+.form-title {
+  font: bold 2.5rem serif;
+}
 
+.label {
+  font: bold 1.3rem serif;
+}
 
+.btn {
+  margin-top: 30px;
+  margin-bottom: 20px;
+  width: 200px;
+  height: 40px;
+  font: bold 1.2rem serif;
+  background: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+/* estilos main --------------------------------------*/
+
+.fil-form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 60px;
+  margin-bottom: 70px;
+}
+
+.fil-box {
+  width: 40%;
+  height: 30px;
+  border-radius: 5px;
+  border: 2px solid;
+  font: bold 1rem serif;
+  text-align: center;
+}
+
+.fil-btn {
+  width: 100px;
+  height: 25px;
+  margin-left: 5px;
+  font: bold 1rem serif;
+  background: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
+  border-radius: 10px;
+  cursor: pointer;
+}
 
 .normal-btn {
   height: 40px;
@@ -148,57 +145,56 @@ body {
   margin-bottom: 20px;
 }
 
-
-
-
 /* card---------------------------------------- */
-.card{
-    margin: 30px 30px 0px 50px;
-    width: 250px;
-    background-color:rgb(176, 55, 180);
-    box-shadow: 0 4px 5px rgba(0, 0, 0, 0.2);
-    border-radius: 3px;
-    box-shadow: 0 0 10px black;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    float: left;
+.card {
+  margin: 30px 30px 0px 50px;
+  width: 250px;
+  background-color: rgb(176, 55, 180);
+  box-shadow: 0 4px 5px rgba(0, 0, 0, 0.2);
+  border-radius: 3px;
+  box-shadow: 0 0 10px black;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  float: left;
 }
 
-.card-img{
-    max-width: 100%;
-    
+.card-img {
+  max-width: 100%;
 }
 
-.des-cont{
-    margin: 1rem;
-    width: 100%;
-    background-color: rgba(255, 255, 255, 0.589);
-    box-shadow: 0 4px 5px rgba(0, 0, 0, 0.2);
-    border: 1px solid rgb(176, 55, 180);
-    border-radius: 3px;
+.des-cont {
+  margin: 1rem;
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0.589);
+  box-shadow: 0 4px 5px rgba(0, 0, 0, 0.2);
+  border: 1px solid rgb(176, 55, 180);
+  border-radius: 3px;
 }
 
-.card-title, .card-text{
-    text-align: center;
-    font: bold 1.5rem serif;
+.card-title,
+.card-text {
+  text-align: center;
+  font: bold 1.5rem serif;
 }
 
-.ed-btn, .del-btn{
-    width: 80px;
-    height: 30px;
-    font: bold 1rem serif;
-    background: rgba(255, 255, 255, 0.356);
-    color: rgb(0, 0, 0);
-    border: 1px solid;
-    border-radius: 5px;
-    cursor: pointer;
-    margin: 0px 0px 16px 16px;
+.ed-btn,
+.del-btn {
+  width: 80px;
+  height: 30px;
+  font: bold 1rem serif;
+  background: rgba(255, 255, 255, 0.356);
+  color: rgb(0, 0, 0);
+  border: 1px solid;
+  border-radius: 5px;
+  cursor: pointer;
+  margin: 0px 0px 16px 16px;
 }
 
-.ed-btn:hover, .del-btn:hover{
-    background: rgba(88, 78, 88, 0.192);
-
+.ed-btn:hover,
+.del-btn:hover {
+  background: rgba(88, 78, 88, 0.192);
+}
 
 .card-btn {
   width: 80px;
@@ -215,4 +211,3 @@ body {
 .card-btn:hover {
   background: rgba(88, 78, 88, 0.192);
 }
-
